--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
-  background: #eee;
+  background: rgb(57, 58, 110);
+  
 }
 
 .App {
@@ -9,19 +10,19 @@ body {
 
 .App__backdrop {
   position: absolute;
-  height: 180px;
+  height: 420px;
   width: 100%;
-  background: #300d4f;
+  background: #43457F;
   z-index: -1;
 }
 
 .App__backdrop__logo {
-  height: 30px;
+  height: 100px;
   margin: 1rem;
 }
 
 .App__chatwindow {
-  box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.4);
   border: 1px solid #d0d0d0;
   display: flex;
   margin-top: 40px;
